week-5/day-1/yaml-practice/block-0/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
