week-5/day-1/yaml-practice/block-0/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: web
  name: web
spec:
  containers:
  - image: nginx:1.21
    name: web
    readinessProbe:
      httpGet:
        path: /
        port: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
