week-5/day-1/yaml-practice/block-0/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-svc
  name: api-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
