week-5/day-1/yaml-practice/block-0/egress-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-db
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: db
      ports:
        - port: 5432
          protocol: TCP
